Fix color contrast issues with error colors

--- a/assets/styles/elements.scss
+++ b/assets/styles/elements.scss
@@ -1384,13 +1384,13 @@ details.footnote {
 
 .badge-success {
     background-color: color('green', 300);
-    color: color('green', 800);
+    color: color('green', 900);
 }
 .badge-warning {
     background-color: color('orange', 300);
-    color: color('orange', 800);
+    color: color('orange', 900);
 }
 .badge-error {
     background-color: color('red', 300);
-    color: color('red', 800);
+    color: color('red', 900);
 }
